# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
page_loader/: __init__.py  cli.py  engine.py  exceptions.py  file_system.py  html_builder.py  loader.py  logger_agent.py  resource.py  system.py  urls.py
page_loader/scripts/: page_loader.py
tests/: test_answer_text.py  test_components.py  test_exceptions.py  test_full_path.py  test_loader.py
tests/fixtures/: parsed_minimal_page.html  ru-hexlet-io-courses.html
tests/fixtures/demo_page/in/: example.html
